    - is_smooth(n,k)                  is n a k-smooth number
    - is_rough(n,k)                   is n a k-rough number
    - is_practical(n)                 is n a practical number
    - is_delicate_prime(n[,b])        is n a digitally delicate prime (base b)
    - is_sum_of_squares(n[,k])        can n be a sum of k squares (dflt k=2)
    - is_omega_prime(k,n)             is n divisible by exactly k primes
    - is_almost_prime(k,n)            does n have exactly k prime factors
    - is_powerfree(n[,k])             is n a k-powerfree number (default k=2)
    - is_powerful(n[,k])              is n a k-powerful number (default k=2)
    - is_perfect_power(n)             is n a perfect power (1,4,8,9,16,25,..)
    - is_odd(n)                       is n an odd integer (not divisible by 2)
    - is_even(n)                      is n an even integer (divisible by 2)
    - is_divisible(n,d)               is n exactly divisible by d
    - is_congruent(n,c,d)             is n congruent to c mod d
    - almost_primes(k,[start,]end)    array ref of k-almost-primes
    - almost_prime_count(k,n)         count of integers with exactly k factors
    - almost_prime_count_approx(k,n)  fast approximate k-almost-prime count
    - almost_prime_count_lower(k,n)   fast k-almost-prime count lower bound
    - almost_prime_count_upper(k,n)   fast k-almost-prime count upper bound
    - nth_almost_prime(k,n)           The nth number with exactly k factors
    - nth_almost_prime_approx(k,n)    fast approximate nth k-almost-prime
    - nth_almost_prime_lower(k,n)     fast nth k-almost-prime lower bound
    - nth_almost_prime_upper(k,n)     fast nth k-almost-prime upper bound
    - foralmostprimes {} k,a,b        loop over k-almost-primes
    - omega_primes(k,[start,]end)     array ref of k-omega-primes
    - omega_prime_count(k,n)          count nums divisible by exactly k primes
    - nth_omega_prime(k,n)            The nth number dvsbl by exactly k primes