@@ -207,6 +207,7 @@ t/24-partitions.t
 t/25-lucas_sequences.t
 t/26-binomialmod.t
 t/26-combinatorial.t
+t/26-congruentnum.t
 t/26-delicateprime.t
 t/26-digits.t
 t/26-isalmostprime.t
