@@ -157,6 +157,7 @@ sub entropy_bytes {
 *is_even = \&Math::Prime::Util::PP::is_even;
 *is_divisible = \&Math::Prime::Util::PP::is_divisible;
 *is_congruent = \&Math::Prime::Util::PP::is_congruent;
+*is_congruent_number = \&Math::Prime::Util::PP::is_congruent_number;
 *powerful_count = \&Math::Prime::Util::PP::powerful_count;
 *nth_powerful = \&Math::Prime::Util::PP::nth_powerful;
 *sumpowerful = \&Math::Prime::Util::PP::sumpowerful;
@@ -235,6 +236,7 @@ sub entropy_bytes {
 *znprimroot = \&Math::Prime::Util::PP::znprimroot;
 *is_primitive_root = \&Math::Prime::Util::PP::is_primitive_root;
 *qnr = \&Math::Prime::Util::PP::qnr;
+*is_qr = \&Math::Prime::Util::PP::is_qr;
 
 
 *vecequal = \&Math::Prime::Util::PP::vecequal;
